Refactor app configuration and enhance user experience with new branding and authentication flow
- Updated app name and branding from "HealthcareApp" to "AICura" with new icons and splash images.
- Refactored navigation structure to include new authentication screens: Welcome, Login, Signup, and Forgot Password.
- Improved authentication context for better session management and profile updates.
- Enhanced TypeScript configuration with updated path aliases for better module resolution.
- Added new loading screen and improved onboarding experience.
- Updated i18n translations for multiple languages, enhancing multilingual support across the app.

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -198,28 +198,30 @@
   },
   "auth": {
     "welcome": {
-      "title": "ابدأ رحلتك اليوم!",
-      "description": "رفيقك الصحي الشخصي لحياة أفضل",
+      "title": "™AICura مرحباً بك في",
+      "description": "رفيقك الصحي الذكي",
+      "subtitle": "اختبر مستقبل الرعاية الصحية",
       "login": "تسجيل الدخول",
-      "signup": "إنشاء حساب",
+      "signup": "ابدأ الآن",
       "terms": "بالمتابعة، فإنك توافق على",
       "termsLink": "الشروط والأحكام",
       "privacyLink": "سياسة الخصوصية",
-      "and": "و"
+      "and": "و",
+      "tagline": "صحة ذكية • حياة أفضل"
     },
     "login": {
-      "title": "مرحباً بعودتك",
-      "description": "سجل دخولك للمتابعة",
+      "title": "™AICura مرحباً بعودتك إلى",
+      "description": "رحلتك الصحية تستمر هنا",
       "email": "البريد الإلكتروني",
-      "emailPlaceholder": "أدخل بريدك الإلكتروني",
+      "emailPlaceholder": "أدخل عنوان بريدك الإلكتروني",
       "password": "كلمة المرور",
       "passwordPlaceholder": "أدخل كلمة المرور",
       "forgotPassword": "نسيت كلمة المرور؟",
-      "rememberMe": "تذكرني",
+      "rememberMe": "حفظ تسجيل الدخول",
       "loginButton": "تسجيل الدخول",
-      "noAccount": "ليس لديك حساب؟",
+      "noAccount": "جديد في AICura؟",
       "signupLink": "إنشاء حساب",
-      "or": "أو",
+      "or": "أو تابع باستخدام",
       "socialLogin": {
         "google": "المتابعة باستخدام Google",
         "apple": "المتابعة باستخدام Apple",
@@ -227,36 +229,37 @@
       }
     },
     "signup": {
-      "title": "إنشاء حساب",
-      "description": "سجل للبدء",
+      "title": "™AICura انضم اليوم إلى",
+      "description": "ابدأ رحلتك الصحية الشخصية",
+      "subtitle": "صحتك أولويتنا",
       "name": "الاسم الكامل",
       "namePlaceholder": "أدخل اسمك الكامل",
       "email": "البريد الإلكتروني",
-      "emailPlaceholder": "أدخل بريدك الإلكتروني",
-      "password": "كلمة المرور",
-      "passwordPlaceholder": "أنشئ كلمة مرور",
+      "emailPlaceholder": "أدخل عنوان بريدك الإلكتروني",
+      "password": "إنشاء كلمة المرور",
+      "passwordPlaceholder": "اختر كلمة مرور قوية",
       "confirmPassword": "تأكيد كلمة المرور",
-      "confirmPasswordPlaceholder": "أكد كلمة المرور",
+      "confirmPasswordPlaceholder": "أعد إدخال كلمة المرور",
       "phone": "رقم الهاتف",
       "phonePlaceholder": "أدخل رقم هاتفك",
-      "signupButton": "إنشاء حساب",
-      "haveAccount": "لديك حساب بالفعل؟",
+      "signupButton": "إنشاء حسابك",
+      "haveAccount": "هل أنت عضو في AICura؟",
       "loginLink": "تسجيل الدخول",
-      "or": "أو"
+      "or": "أو انضم باستخدام"
     },
     "forgotPassword": {
-      "title": "نسيت كلمة المرور",
+      "title": "إعادة تعيين كلمة المرور",
       "description": "أدخل بريدك الإلكتروني لإعادة تعيين كلمة المرور",
       "email": "البريد الإلكتروني",
       "emailPlaceholder": "أدخل بريدك الإلكتروني",
       "sendButton": "إرسال رابط إعادة التعيين",
       "backToLogin": "العودة لتسجيل الدخول",
-      "emailSent": "تم إرسال رابط إعادة تعيين كلمة المرور!",
+      "emailSent": "تم إرسال الرابط!",
       "checkEmail": "يرجى التحقق من بريدك الإلكتروني للحصول على التعليمات"
     },
     "otp": {
-      "title": "تحقق من البريد الإلكتروني",
-      "description": "أدخل الرمز المرسل إلى بريدك الإلكتروني",
+      "title": "تأكيد البريد الإلكتروني",
+      "description": "أدخل رمز التحقق المرسل إلى بريدك الإلكتروني",
       "codePlaceholder": "أدخل رمز التحقق",
       "verifyButton": "تحقق",
       "resendCode": "إعادة إرسال الرمز",
