--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -183,28 +183,30 @@
   },
   "auth": {
     "welcome": {
-      "title": "Start Your Journey Today!",
-      "description": "Your personal healthcare companion for a better life",
-      "login": "Login",
-      "signup": "Sign Up",
+      "title": "Welcome to AICura™",
+      "description": "Your Intelligent Healthcare Companion",
+      "subtitle": "Experience the Future of Healthcare",
+      "login": "Sign In",
+      "signup": "Get Started",
       "terms": "By continuing, you agree to our",
       "termsLink": "Terms & Conditions",
       "privacyLink": "Privacy Policy",
-      "and": "and"
+      "and": "and",
+      "tagline": "Smart Health • Better Life"
     },
     "login": {
-      "title": "Welcome Back",
-      "description": "Sign in to continue",
-      "email": "Email",
-      "emailPlaceholder": "Enter your email",
+      "title": "Welcome Back to AICura™",
+      "description": "Your health journey continues here",
+      "email": "Email Address",
+      "emailPlaceholder": "Enter your email address",
       "password": "Password",
       "passwordPlaceholder": "Enter your password",
       "forgotPassword": "Forgot Password?",
-      "rememberMe": "Remember Me",
-      "loginButton": "Login",
-      "noAccount": "Don't have an account?",
-      "signupLink": "Sign Up",
-      "or": "or",
+      "rememberMe": "Keep me signed in",
+      "loginButton": "Sign In",
+      "noAccount": "New to AICura?",
+      "signupLink": "Create Account",
+      "or": "or continue with",
       "socialLogin": {
         "google": "Continue with Google",
         "apple": "Continue with Apple",
@@ -212,36 +214,37 @@
       }
     },
     "signup": {
-      "title": "Create Account",
-      "description": "Sign up to get started",
+      "title": "Join AICura™ Today",
+      "description": "Start your personalized health journey",
+      "subtitle": "Your wellness, our priority",
       "name": "Full Name",
       "namePlaceholder": "Enter your full name",
-      "email": "Email",
-      "emailPlaceholder": "Enter your email",
-      "password": "Password",
-      "passwordPlaceholder": "Create a password",
+      "email": "Email Address",
+      "emailPlaceholder": "Enter your email address",
+      "password": "Create Password",
+      "passwordPlaceholder": "Choose a strong password",
       "confirmPassword": "Confirm Password",
-      "confirmPasswordPlaceholder": "Confirm your password",
+      "confirmPasswordPlaceholder": "Re-enter your password",
       "phone": "Phone Number",
       "phonePlaceholder": "Enter your phone number",
-      "signupButton": "Sign Up",
-      "haveAccount": "Already have an account?",
-      "loginLink": "Login",
-      "or": "or"
+      "signupButton": "Create Your Account",
+      "haveAccount": "Already part of AICura?",
+      "loginLink": "Sign In",
+      "or": "or join with"
     },
     "forgotPassword": {
-      "title": "Forgot Password",
-      "description": "Enter your email to reset password",
+      "title": "Reset Password",
+      "description": "Enter your email to reset your password",
       "email": "Email",
       "emailPlaceholder": "Enter your email",
       "sendButton": "Send Reset Link",
-      "backToLogin": "Back to Login",
-      "emailSent": "Password reset email sent!",
-      "checkEmail": "Please check your email for further instructions"
+      "backToLogin": "Back to Sign In",
+      "emailSent": "Link Sent!",
+      "checkEmail": "Please check your email for instructions"
     },
     "otp": {
       "title": "Verify Email",
-      "description": "Enter the code sent to your email",
+      "description": "Enter the verification code sent to your email",
       "codePlaceholder": "Enter verification code",
       "verifyButton": "Verify",
       "resendCode": "Resend Code",
