--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -183,28 +183,30 @@
   },
   "auth": {
     "welcome": {
-      "title": "¡Comienza tu viaje hoy!",
-      "description": "Tu compañero personal de salud para una vida mejor",
+      "title": "Bienvenido a AICura™",
+      "description": "Tu Compañero Inteligente de Salud",
+      "subtitle": "Experimenta el Futuro de la Salud",
       "login": "Iniciar Sesión",
-      "signup": "Registrarse",
+      "signup": "Comenzar",
       "terms": "Al continuar, aceptas nuestros",
       "termsLink": "Términos y Condiciones",
       "privacyLink": "Política de Privacidad",
-      "and": "y"
+      "and": "y",
+      "tagline": "Salud Inteligente • Vida Mejor"
     },
     "login": {
-      "title": "Bienvenido de nuevo",
-      "description": "Inicia sesión para continuar",
-      "email": "Correo electrónico",
-      "emailPlaceholder": "Ingresa tu correo electrónico",
+      "title": "Bienvenido de Nuevo a AICura™",
+      "description": "Tu viaje de salud continúa aquí",
+      "email": "Correo Electrónico",
+      "emailPlaceholder": "Ingresa tu dirección de correo",
       "password": "Contraseña",
       "passwordPlaceholder": "Ingresa tu contraseña",
-      "forgotPassword": "¿Olvidaste tu contraseña?",
-      "rememberMe": "Recordarme",
+      "forgotPassword": "¿Olvidaste tu Contraseña?",
+      "rememberMe": "Mantener sesión iniciada",
       "loginButton": "Iniciar Sesión",
-      "noAccount": "¿No tienes una cuenta?",
-      "signupLink": "Regístrate",
-      "or": "o",
+      "noAccount": "¿Nuevo en AICura?",
+      "signupLink": "Crear Cuenta",
+      "or": "o continúa con",
       "socialLogin": {
         "google": "Continuar con Google",
         "apple": "Continuar con Apple",
@@ -212,36 +214,37 @@
       }
     },
     "signup": {
-      "title": "Crear Cuenta",
-      "description": "Regístrate para comenzar",
-      "name": "Nombre completo",
+      "title": "Únete a AICura™ Hoy",
+      "description": "Comienza tu viaje personalizado de salud",
+      "subtitle": "Tu bienestar, nuestra prioridad",
+      "name": "Nombre Completo",
       "namePlaceholder": "Ingresa tu nombre completo",
-      "email": "Correo electrónico",
-      "emailPlaceholder": "Ingresa tu correo electrónico",
-      "password": "Contraseña",
-      "passwordPlaceholder": "Crea una contraseña",
+      "email": "Correo Electrónico",
+      "emailPlaceholder": "Ingresa tu dirección de correo",
+      "password": "Crear Contraseña",
+      "passwordPlaceholder": "Elige una contraseña segura",
       "confirmPassword": "Confirmar Contraseña",
-      "confirmPasswordPlaceholder": "Confirma tu contraseña",
-      "phone": "Número de teléfono",
+      "confirmPasswordPlaceholder": "Vuelve a ingresar tu contraseña",
+      "phone": "Número de Teléfono",
       "phonePlaceholder": "Ingresa tu número de teléfono",
-      "signupButton": "Registrarse",
-      "haveAccount": "¿Ya tienes una cuenta?",
+      "signupButton": "Crear Tu Cuenta",
+      "haveAccount": "¿Ya eres parte de AICura?",
       "loginLink": "Iniciar Sesión",
-      "or": "o"
+      "or": "o únete con"
     },
     "forgotPassword": {
-      "title": "Olvidé mi Contraseña",
-      "description": "Ingresa tu correo para restablecer la contraseña",
-      "email": "Correo electrónico",
+      "title": "Restablecer Contraseña",
+      "description": "Ingresa tu correo electrónico para restablecer tu contraseña",
+      "email": "Correo Electrónico",
       "emailPlaceholder": "Ingresa tu correo electrónico",
-      "sendButton": "Enviar enlace de restablecimiento",
+      "sendButton": "Enviar Enlace",
       "backToLogin": "Volver a Iniciar Sesión",
-      "emailSent": "¡Correo de restablecimiento enviado!",
-      "checkEmail": "Por favor revisa tu correo para más instrucciones"
+      "emailSent": "¡Enlace Enviado!",
+      "checkEmail": "Por favor, revisa tu correo electrónico para ver las instrucciones"
     },
     "otp": {
-      "title": "Verificar Correo",
-      "description": "Ingresa el código enviado a tu correo",
+      "title": "Verificar Correo Electrónico",
+      "description": "Ingresa el código de verificación enviado a tu correo electrónico",
       "codePlaceholder": "Ingresa el código de verificación",
       "verifyButton": "Verificar",
       "resendCode": "Reenviar Código",
