--- a/src/i18n/translations/ur.json
+++ b/src/i18n/translations/ur.json
@@ -183,8 +183,8 @@
   },
   "auth": {
     "welcome": {
-      "title": "آج ہی اپنا سفر شروع کریں!",
-      "description": "بہتر زندگی کے لیے آپ کا ذاتی صحت ساتھی",
+      "title": "AICura میں خوش آمدید",
+      "description": "آپ کا مصنوعی ذہانت سے چلنے والا صحت کا ساتھی",
       "login": "لاگ ان",
       "signup": "سائن اپ",
       "terms": "جاری رکھ کر، آپ ہماری",
@@ -193,8 +193,8 @@
       "and": "اور"
     },
     "login": {
-      "title": "خوش آمدید",
-      "description": "جاری رکھنے کے لیے لاگ ان کریں",
+      "title": "واپسی پر خوش آمدید",
+      "description": "اپنے AICura اکاؤنٹ میں لاگ ان کریں",
       "email": "ای میل",
       "emailPlaceholder": "اپنی ای میل درج کریں",
       "password": "پاس ورڈ",
@@ -212,40 +212,40 @@
       }
     },
     "signup": {
-      "title": "اکاؤنٹ بنائیں",
-      "description": "شروع کرنے کے لیے سائن اپ کریں",
-      "name": "پورا نام",
-      "namePlaceholder": "اپنا پورا نام درج کریں",
+      "title": "AICura میں شامل ہوں",
+      "description": "اپنا ذاتی صحت اکاؤنٹ بنائیں",
+      "name": "مکمل نام",
+      "namePlaceholder": "اپنا مکمل نام درج کریں",
       "email": "ای میل",
       "emailPlaceholder": "اپنی ای میل درج کریں",
       "password": "پاس ورڈ",
       "passwordPlaceholder": "پاس ورڈ بنائیں",
       "confirmPassword": "پاس ورڈ کی تصدیق",
-      "confirmPasswordPlaceholder": "اپنے پاس ورڈ کی تصدیق کریں",
+      "confirmPasswordPlaceholder": "پاس ورڈ کی تصدیق کریں",
       "phone": "فون نمبر",
       "phonePlaceholder": "اپنا فون نمبر درج کریں",
-      "signupButton": "سائن اپ",
+      "signupButton": "اکاؤنٹ بنائیں",
       "haveAccount": "پہلے سے اکاؤنٹ ہے؟",
       "loginLink": "لاگ ان",
       "or": "یا"
     },
     "forgotPassword": {
-      "title": "پاس ورڈ بھول گئے",
-      "description": "پاس ورڈ دوبارہ ترتیب دینے کے لیے اپنی ای میل درج کریں",
+      "title": "پاس ورڈ ری سیٹ",
+      "description": "پاس ورڈ ری سیٹ کرنے کے لیے اپنی ای میل درج کریں",
       "email": "ای میل",
       "emailPlaceholder": "اپنی ای میل درج کریں",
-      "sendButton": "دوبارہ ترتیب کا لنک بھیجیں",
+      "sendButton": "ری سیٹ لنک بھیجیں",
       "backToLogin": "لاگ ان پر واپس جائیں",
-      "emailSent": "پاس ورڈ دوبارہ ترتیب کی ای میل بھیج دی گئی!",
-      "checkEmail": "مزید ہدایات کے لیے اپنی ای میل چیک کریں"
+      "emailSent": "لنک بھیج دیا گیا!",
+      "checkEmail": "براہ کرم ہدایات کے لیے اپنی ای میل چیک کریں"
     },
     "otp": {
       "title": "ای میل کی تصدیق",
-      "description": "اپنی ای میل پر بھیجا گیا کوڈ درج کریں",
+      "description": "اپنی ای میل پر بھیجا گیا تصدیقی کوڈ درج کریں",
       "codePlaceholder": "تصدیقی کوڈ درج کریں",
       "verifyButton": "تصدیق کریں",
       "resendCode": "کوڈ دوبارہ بھیجیں",
-      "resendTimer": "کوڈ {seconds} سیکنڈ میں دوبارہ بھیجیں",
+      "resendTimer": "کوڈ دوبارہ بھیجنے کے لیے {seconds} سیکنڈ",
       "emailSentTo": "کوڈ {email} پر بھیج دیا گیا"
     },
     "errors": {
